lib/bait/tests/inout_error/ident/redefinition.in.bt
const foo := 1

fun foo() {
	same := 123
	same := true
}
